recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: too many arguments for method avance: (x$1: Double)Unit
    avance(100,0)
          ^FourSquare:4: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite()
          ^FourSquare:5: error: too many arguments for method avance: (x$1: Double)Unit
    avance(100,0)
          ^FourSquare:6: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite()
          ^FourSquare:7: error: too many arguments for method avance: (x$1: Double)Unit
    avance(100,0)
          ^FourSquare:8: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite()
          ^FourSquare:9: error: too many arguments for method avance: (x$1: Double)Unit
    avance(100,0)
          ^FourSquare:11: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:12: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:13: error: too many arguments for method avance: (x$1: Double)Unit
  avance(100,0)
        ^FourSquare:14: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^